[project]
name = "ml-systems-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "joblib>=1.5.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "scikit-learn>=1.8.0",
    "structlog>=26.1.0",
    "uuid>=1.30",
    "uvicorn>=0.49.0",
]
